fix: reports z-index
git-svn-id: https://win-lhoa5a3q3i7/svn/front-end-backup/trunk@5726 3f25d8b1-e65f-8d48-bd54-75b34d8be7f1

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1705,7 +1705,7 @@ tr.unread-row, tr.current-version {
   background-color: rgba(255, 255, 255, .5);
   width: 150px;
   height: 20px;
-  z-index: 79;
+  z-index: 2;
   font-family: Tahoma, sans-serif;
   padding: 5px;
   border-radius: 10px;
